the text now sets the horizontal scroll at correct times

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 #canvas-wrapper {
   position: absolute;
   top: 50px;
-  left: 150px;
+  left: 160px;
 }
 
 #title {
